Fix bug in script tag.

--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
 
 
 	<script type="text/javascript" src="/min/b=js&amp;f=vendor/jquery.js,vendor/handlebars-1.0.0-rc.3.js,vendor/ember-1.0.0-rc.3.js,app.js"></script>
-	<script>
-	  $(document).foundation();
 
+	<script type="text/javascript">
+	  $(document).foundation();
+	</script>
+	
+	<script type="text/javascript">
 	  var _paq = _paq || [];
 	  _paq.push(["trackPageView"]);
 	  _paq.push(["enableLinkTracking"]);
